@@ -16,6 +16,8 @@ Version 1.3.1
 5455							: build system fix
 5459							: NULL pointer check in the cache
 5460							: Selection check in the revision graph
+5464							: InterlockedExchange()
+5466							: missing author, date, revision in CSVNStatusListCtrl
 
 Version 1.3.0
 5321, 5322						: issue #205.
