@@ -26,7 +26,7 @@ CShellUpdater::CShellUpdater(void)
 	m_hWakeEvent = CreateEvent(NULL,FALSE,FALSE,NULL);
 	m_hTerminationEvent = CreateEvent(NULL,TRUE,FALSE,NULL);
 	m_hThread = INVALID_HANDLE_VALUE;
-	m_bRunning = false;
+	m_bRunning = FALSE;
 }
 
 CShellUpdater::~CShellUpdater(void)
@@ -36,7 +36,7 @@ CShellUpdater::~CShellUpdater(void)
 
 void CShellUpdater::Stop()
 {
-	m_bRunning = false;
+	InterlockedExchange(&m_bRunning, FALSE);
 	if (m_hTerminationEvent != INVALID_HANDLE_VALUE)
 	{
 		SetEvent(m_hTerminationEvent);
@@ -63,7 +63,7 @@ void CShellUpdater::Initialise()
 	// If m_hWakeEvent is already signalled the worker thread 
 	// will behave properly (with normal priority at worst).
 
-	m_bRunning = true;
+	InterlockedExchange(&m_bRunning, TRUE);
 	unsigned int threadId;
 	m_hThread = (HANDLE)_beginthreadex(NULL,0,ThreadEntry,this,0,&threadId);
 	SetThreadPriority(m_hThread, THREAD_PRIORITY_LOWEST);
