@@ -31,7 +31,7 @@
 IMPLEMENT_DYNAMIC(CAddDlg, CResizableStandAloneDialog)
 CAddDlg::CAddDlg(CWnd* pParent /*=NULL*/)
 	: CResizableStandAloneDialog(CAddDlg::IDD, pParent),
-	m_bThreadRunning(false)
+	m_bThreadRunning(FALSE)
 {
 }
 
@@ -77,7 +77,7 @@ BOOL CAddDlg::OnInitDialog()
 	{
 		CMessageBox::Show(this->m_hWnd, IDS_ERR_THREADSTARTFAILED, IDS_APPNAME, MB_OK | MB_ICONERROR);
 	}
-	m_bThreadRunning = TRUE;
+	InterlockedExchange(&m_bThreadRunning, TRUE);
 
 	return TRUE;  // return TRUE unless you set the focus to a control
 	// EXCEPTION: OCX Property Pages should return FALSE
@@ -135,7 +135,7 @@ UINT CAddDlg::AddThread()
 
 	GetDlgItem(IDOK)->EnableWindow(true);
 	GetDlgItem(IDCANCEL)->EnableWindow(true);
-	m_bThreadRunning = FALSE;
+	InterlockedExchange(&m_bThreadRunning, FALSE);
 	return 0;
 }
 
@@ -168,7 +168,7 @@ BOOL CAddDlg::PreTranslateMessage(MSG* pMsg)
 						CMessageBox::Show(this->m_hWnd, IDS_ERR_THREADSTARTFAILED, IDS_APPNAME, MB_OK | MB_ICONERROR);
 					}
 					else
-						m_bThreadRunning = TRUE;
+						InterlockedExchange(&m_bThreadRunning, TRUE);
 				}
 			}
 			break;
