@@ -5,6 +5,9 @@ Version 1.3.1
        previous versions and other clients. (Stefan)
 - BUG: When starting Blame, the default end revision was 0 instead
        of HEAD. (Stefan)
+- BUG: Fix crashes on SMP systems. (Stefan)
+- BUG: Author, revision and date weren't always shown in the 
+       'Check for modifications' dialog.
 
 Version 1.3.0
 - NEW: The settings dialog now has a button to open the system sound
